--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "majid/shamsi",
+    "keywords": ["laravel", "shmasi", "hejri", "date"],
     "description": "",
     "authors": [
         {
@@ -16,5 +17,5 @@
             "Majid\\Shamsi": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
