tag dictation problem

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "majid/shamsi",
-    "keywords": ["laravel", "shmasi", "hejri", "date"],
+    "keywords": ["laravel", "shamsi", "hejri", "date"],
     "description": "",
     "authors": [
         {
