--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "majid/shamsi",
     "keywords": ["laravel", "shamsi", "jalali","hejri", "date", "time","iran","farsi","persian","hijri"],
-    "description": "laravel 4.2 package for shmasi date",
+    "description": "laravel 4.2 package for shamsi date",
     "license": "MIT",
     "authors": [
         {
